Fix issue with SVG overflow

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -51,4 +51,7 @@
   .footer-links {
     flex-direction: column;
   }
+  .footer-logo {
+    width: 180px;
+  }
 }
