--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -79,6 +79,7 @@ h5 {
 }
 
 p {
+  font-size: 1rem;
   line-height: 1.5;
 }
 
